<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/firasansbold"
                android:text="@string/test_moment"
                android:textColor="@color/pink"
                android:textSize="26sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_moment_subtitle_1"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_moment_subtitle_2"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_moment_reminder"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/startTestButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_test"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/bg_multicolor_button"
                android:layout_gravity="center"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginTop="30dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>