<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="br.com.noclaftech.showin.presentation.changeartistaccountstep2.ChangeArtistAccountStep2ViewModel"/>
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black"
        android:padding="20dp"
        tools:context=".presentation.changeartistaccountstep2.ChangeArtistAccountStep2Activity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    >

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:onClick="@{() -> viewModel.onBackClicked()}"
                        android:padding="10dp"
                        android:src="@drawable/back_icon"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/star_account"
                        android:textColor="@color/pink"
                        android:textSize="26sp"
                        android:textStyle="bold"
                        android:layout_marginStart="20dp"
                        android:layout_gravity="center"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/now_just_set_your_artist_page"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_marginTop="40dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/artist_page_settings"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="30dp"/>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/show_concerts_performed"
                        android:textColor="@color/white"/>

                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:checked="@={viewModel.showPerformed}"
                        android:layout_alignParentEnd="true"
                        android:theme="@style/SCBSwitch"
                        android:layout_gravity="end"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/show_number_fans_in_show"
                        android:textColor="@color/white"/>

                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:checked="@={viewModel.showNumberFans}"
                        android:layout_alignParentEnd="true"
                        android:theme="@style/SCBSwitch"
                        android:layout_gravity="end"/>

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/write_bio"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="20dp"
                    android:id="@+id/bio"
                    android:text="@={viewModel.bio}"
                    android:minLines="10"
                    android:maxLength="150"
                    android:lines="20"
                    android:padding="10dp"
                    android:hint="@string/type_message_here"
                    android:scrollbars="vertical"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:inputType="textMultiLine"
                    android:background="@drawable/bg_edit_text"
                    android:gravity="top" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkbox"
                        android:text="@string/agree_with"
                        android:checked="@={viewModel.accept}"
                        android:textSize="16sp"
                        android:buttonTint="@color/white"
                        android:textColor="@color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> viewModel.onTermsUseClicked()}"
                        android:text="@string/terms_use"
                        android:textColor="@color/light_blue"
                        android:textSize="16sp"
                        android:layout_marginStart="10dp"/>

                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_button"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/switch_to_star_account"
                    android:textAllCaps="true"
                    android:onClick="@{() -> viewModel.onChangeClicked()}"
                    android:textColor="@color/white"
                    android:padding="10dp"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>