<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="br.com.noclaftech.showin.presentation.artistinfo.ArtistInfoViewModel"/>
    </data>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:padding="20dp"
        tools:context=".presentation.artistinfo.ArtistInfoActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="40dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:onClick="@{() -> viewModel.onBackClicked()}"
                    android:src="@drawable/back_icon"
                    android:padding="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/artist_information"
                    android:textSize="26sp"
                    android:textColor="@color/pink"
                    android:textStyle="bold"
                    android:layout_marginStart="20dp"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cap_artistic_name"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/artisticName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                tools:text="@string/cap_artistic_name"
                android:text="@={viewModel.artisticName}"
                android:hint="@string/cap_artistic_name"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:background="@drawable/bg_edit_text"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artist_page_settings"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_concerts_performed"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/SCBSwitch"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
<!--                android:checked="@={viewModel.oldShowsDisplay}" -->

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_number_fans_in_show"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/SCBSwitch"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
<!--                android:checked="@={viewModel.fansDisplay}" -->

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bio"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginTop="30dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:id="@+id/bio"
                tools:text="@string/lorem_ipsum"
                android:text="@={viewModel.biography}"
                android:minLines="10"
                android:lines="20"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:scrollbars="vertical"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:inputType="textMultiLine"
                android:background="@drawable/bg_edit_text"
                android:gravity="top" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.onSaveClicked()}"
                android:background="@drawable/bg_button"
                android:layout_marginTop="50dp"
                android:text="@string/save"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:padding="10dp"/>

        </LinearLayout>

    </ScrollView>

</layout>
